force-app/main/default/objects/leaseworks__Consolidated_Intel__c/leaseworks__Consolidated_Intel__c.object-meta.xml
<CustomObject>
    <description>Consolidation of all Aircraft In Transactions and Market Intel records based on Aircraft Type.
[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Consolidated Intel</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consolidated Intel</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>