force-app/main/default/objects/leaseworks__Consolidated_Intel__c/fields/leaseworks__Interaction_Log__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interaction_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Interaction Log</label>
    <referenceTo>leaseworks__Customer_Interaction_Log__c</referenceTo>
    <relationshipLabel>Consolidated Intel</relationshipLabel>
    <relationshipName>Consolidated_Intel</relationshipName>
    <type>Lookup</type>
</CustomField>