force-app/main/default/objects/leaseworks__Consolidated_Intel__c/fields/leaseworks__Maintenance_Liability_M__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Liability_M__c</fullName>
    <formula>IF(leaseworks__Type__c == &apos;MI&apos;, leaseworks__Market_Intelligence__r.leaseworks__Mx_Liabilities_During_Lease_K__c, 
IF(leaseworks__Type__c == &apos;AIT&apos;, leaseworks__Aircraft_In_Transaction__r.leaseworks__Maintenance_Liability_mm__c, 
IF(leaseworks__Type__c == &apos;IL&apos;,  leaseworks__Interaction_Log__r.leaseworks__Mx_Liabilities_During_Lease_K__c , null) ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Liability ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>