force-app/main/default/objects/leaseworks__Consolidated_Intel__c/fields/leaseworks__Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator__c</fullName>
    <formula>IF(leaseworks__Type__c == &#39;MI&#39;,  HYPERLINK(&#39;/&#39; &amp;  leaseworks__Market_Intelligence__r.leaseworks__Lesor__c , leaseworks__Market_Intelligence__r.leaseworks__Lesor__r.Name, &#39;_blank&#39;), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operator</label>
    <type>Text</type>
</CustomField>