force-app/main/default/objects/leaseworks__Consolidated_Intel__c/fields/leaseworks__Other_Party__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Other_Party__c</fullName>
    <formula>IF(leaseworks__Type__c == &apos;AIT&apos;, leaseworks__Aircraft_In_Transaction__r.leaseworks__Transaction__r.leaseworks__Seller__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Party</label>
    <type>Text</type>
</CustomField>