force-app/main/default/objects/leaseworks__Consolidated_Intel__c/fields/leaseworks__Variant__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Variant__c</fullName>
    <formula>IF(leaseworks__Type__c == &apos;MI&apos;, TEXT( leaseworks__Market_Intelligence__r.leaseworks__Asset_Variant_GP__c ), 
IF(leaseworks__Type__c == &apos;AIT&apos;, TEXT(leaseworks__Aircraft_In_Transaction__r.leaseworks__Aircraft_Variant__c), 
IF(leaseworks__Type__c == &apos;IL&apos;,  TEXT(leaseworks__Interaction_Log__r.leaseworks__Asset_Variant_GP__c) , null) ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variant</label>
    <type>Text</type>
</CustomField>